feat: Enhance ComputerLog model with uptime and datetime casting
style: Update LoaderSpinner styles for better visibility

fix: Integrate toast notifications in computerActivity composable for success and error handling

refactor: Adjust import path for useToast in excel composable

fix: Improve error handling in student store with backend messages

fix: Update Echo configuration for websocket connection

fix: Modify IR.html for versioning and logo path

feat: Implement real-time updates for computer status in Scan.vue

feat: Add event listener for browser activity updates in BrowserActivity.vue

feat: Add event listener for computer activity updates in ComputerActivity.vue

feat: Enhance attendance page with laboratory filtering and improved export functionality

feat: Add uptime formatting and session time display in ComputerLogs.vue

style: Refine table headers and data presentation in ComputerLogs.vue

feat: Create Attendance.html format for attendance reports

fix: Clean up console logs in WorkStationMapping.vue

--- a/frontend/src/formats/IR.html
+++ b/frontend/src/formats/IR.html
@@ -212,7 +212,7 @@
     <div class="form-wrapper">
         <table class="header-table">
             <tr class="header-top">
-                <td>VERSION NO.</td>
+                <td>VERSION NO. 2</td>
                 <td style="border-bottom: none; text-align: left;">DOCUMENT NAME</td>
                 <td>DOCUMENT NO.</td>
             </tr>
@@ -220,7 +220,7 @@
                 <td class="version-cell">
                     <div class="version-number" data-field="version-number">2</div>
                     <div class="seal-box">
-                        <img data-field="logo" style="width: 100px; height:100px;" src="" alt="School Seal">
+                        <img data-field="logo" style="width: 100px; height:100px;" src="../assets/log-trans.png" alt="School Seal">
                     </div>
                 </td>
                 <td class="docname-cell" style="border-top: none;">
@@ -229,8 +229,7 @@
                 </td>
                 <td class="docinfo-cell">
                     <div class="doc-info-line">
-                        <span class="doc-info-heading">REVISION NO.</span>
-                        <span data-field="revision-number">2</span>
+                        <span class="doc-info-heading">REVISION NO. 2</span>
                     </div>
                     <div class="doc-info-line" style="flex-direction: column; gap: 4px; align-items: flex-start;">
                         <span class="doc-info-heading">EFFECTIVITY DATE</span>
